// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<h3
  className="sc-ePsPkC bdMrNV"
>
  Heading
</h3>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-ePsPkC bdMrNV"
  >
    Default color is Bulma
  </h3>
  <h3
    className="sc-ePsPkC YdtXk"
    color="piccolo.100"
  >
    Piccolo
  </h3>
  <h3
    className="sc-ePsPkC eXSzdu"
    color="trunks.100"
  >
    Trunks
  </h3>
  <h3
    className="sc-ePsPkC caxupg"
    color="krillin.100"
  >
    Krillin
  </h3>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-ePsPkC bdMrNV"
  >
    Default font-weight is bold
  </h3>
  <h3
    className="sc-ePsPkC dhDPCQ"
  >
    Font-weight is regular
  </h3>
</div>
`;

exports[`Caption renders line height 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-ePsPkC bdMrNV"
  >
    Line-height is pre-calculated
  </h3>
  <h3
    className="sc-ePsPkC kxeyBI"
  >
    Custon line-height
  </h3>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-ePsPkC bdMrNV"
  >
    H3 is a default tag
  </h3>
  <h2
    className="sc-ePsPkC bdMrNV"
  >
    H2 tag
  </h2>
  <h6
    className="sc-ePsPkC bdMrNV"
  >
    H6 tag
  </h6>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-ePsPkC bdMrNV"
  >
    Default font-size is 16px
  </h3>
  <h3
    className="sc-ePsPkC kvFEFC"
    size={24}
  >
    Size is 24px
  </h3>
  <h3
    className="sc-ePsPkC cdscTS"
    size={48}
  >
    Size is 48px
  </h3>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-ePsPkC bdMrNV"
  >
    Text-align is not specified
  </h3>
  <h3
    className="sc-ePsPkC jfUzWm"
  >
    Centered Heading
  </h3>
  <h3
    className="sc-ePsPkC fzvziN"
  >
    Right alignment
  </h3>
</div>
`;

exports[`Caption renders underline 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-ePsPkC bdMrNV"
  >
    Default text-decoration is none
  </h3>
  <h3
    className="sc-ePsPkC jczZGU"
  >
    Underline Heading
  </h3>
</div>
`;

exports[`Caption renders uppercase 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-ePsPkC bdMrNV"
  >
    Default text-transform is none
  </h3>
  <h3
    className="sc-ePsPkC cVSOCq"
  >
    Uppercase Heading
  </h3>
</div>
`;
